@@ -371,6 +371,45 @@ proc test_str_pc {} {
 	".*bx lr.*"
 }
 
+# Test 16 bit thumb instruction 'add rd, pc'.
+
+proc test_add_rn_pc {} {
+    global srcfile gdb_prompt
+
+    set test "break test_add_rn_pc"
+    gdb_test_multiple "break *test_add_rn_pc" $test {
+	-re "Breakpoint.*at.* file .*$srcfile, line.*\r\n$gdb_prompt $" {
+	    pass $test
+	}
+	-re "No symbol.*\r\n$gdb_prompt $" {
+	    return
+	}
+    }
+
+    gdb_continue_to_breakpoint "continue to test_add_rn_pc" \
+	".*mov.*r3, 4.*"
+
+    gdb_test "break *test_add_rn_pc_start" \
+	"Breakpoint.*at.* file .*$srcfile, line.*" \
+	"break test_add_rn_pc_start"
+
+    gdb_continue_to_breakpoint "continue to test_add_rn_pc_start" \
+	".*add.*r3,.*pc.*"
+
+    set pc_val [get_integer_valueof "\$pc" 0]
+
+    gdb_test "break *test_add_rn_pc_end" \
+	"Breakpoint.*at.* file .*$srcfile, line.*" \
+	"break test_add_rn_pc_end"
+
+    gdb_continue_to_breakpoint "continue to test_add_rn_pc_end" \
+	".*bx lr.*"
+
+    set r3_val [get_integer_valueof "\$r3" 0]
+    # Test the value in r3 is correct.
+    gdb_assert { [expr {$pc_val + 4 + 4} == $r3_val] }
+}
+
 # Get things started.
 
 clean_restart ${testfile}
@@ -409,6 +448,8 @@ test_adr_32bit
 test_pop_pc
 
 test_str_pc
+
+test_add_rn_pc
 
 ##########################################
 
